# cufp-gp-tutorial-2015

./: .gitignore  gp.cabal  stack.yaml
src/: NP.hs  NS.hs  Use.hs
