name:                gp
version:             0.1.0.0
synopsis:            CUFP tutorial
license:             MIT
author:              Scott Fleischman
maintainer:          
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: NP, NS, Use
  build-depends:
    base,
    containers,
    generics-sop
  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src
  default-language: Haskell2010
